test/DaedalusCompiler.Tests/SemanticErrors/DeclarationUsagesCheckerTests.cs
namespace DaedalusCompiler.Tests.SemanticErrors
{
    public class DeclarationUsagesCheckerTests
    {
        
    }
}